ChangeLog for the Astro project.

20191225:
	* add temperature retrieval to ASI Ccd class
	* add Temperature metadata to Ccd class
	* add Gain retrieval to ASI Ccd class
	* increase temperature stable interval from +-1 degree to +-3 degrees

20191224:
	* add restart command in snowdaemon client
	* improve systemd service file
	* add wait option to snowstar

20190914:
	* make MilkyWay debugging less verbose

20190911:
	* fix const in AzmAltConverter class

20190910:
	* fix off-by-1 error in ConstellationCatalog.cpp

20190909:
	* add ConstellationCatalog to catalog library
	* add normalization to Point class

20190908:
	* add start script for virtual frame buffer
	* add gateway PHP scripts
	* only call default MilkyWay constructor once

20190903:
	* add -Wno-psabi option to silence GCC 7.1
	* portability fixes for Raspbian/Debian 10
	* fix ASI detection

20190901:
	* fix bug that prevented calculated from being saved
	* add callback for deleted tasks
	* add long exposure time to Atik cameras that only support short
	  exposures
	* add add() method to Image template
	* fix wrong column name in taskqueue table

20190823:
	* fix ifstream.fail missing in catalogs
	* fix bug that PGC data file open was not checked
	* get rid of macros major/minor, as they conflict with member 
	  variable names in Stellarium.cpp

20190822:
	* add MilkyWay class
	* add scalar product to RaDec
	* add exp(), distance() methods to RaDec

20190729:
	* fix ICE installation location

20190807:
	* database backend for PGC catalog implemented

20190806:
	* added PGC catalog
	* improved performance of DSO catalogs using singleton map

20190729:
	* add LD_LIBRARY_PATH so that snowstar is able to find libraries
	  (seems to be necessary for Ice-3.7.3, the current git version)
	* fix build scripts
	* add elliptical outlines from stellarium catalog

20190728:
	* add findLike to BSC
	* add star catalogs to catalogdialog

20190624:
	* add AC_OPENMP

20180514:
	* portability to Ubuntu 18.04

20180507: